fix spacing

--- a/styles/about.css
+++ b/styles/about.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 12%;
+    gap: 9%;
     padding-bottom: 66px;
 }
 
